feat: implement api methods
