# internal/server/routes.go
@@ -42,6 +42,7 @@ func (s *Server) routes() {
 
 			// bookmarks API
 			r.Get("/bookmarks/{id}", s.bookmarkAPI.Secure(s.bookmarkAPI.GetBookmarkByID))
+			r.Get("/bookmarks/bypath", s.bookmarkAPI.Secure(s.bookmarkAPI.GetBookmarksByPath))
 		})
 		// the SPA
 		handler.ServeStaticDir(r, "/ui", http.Dir(filepath.Join(s.basePath, "./assets/ui")))
